[tool.poetry]
name = "factorize-multiprocessing-testing"
version = "0.1.0"
description = ""
authors = ["Denys Tantsiura <ghost0002501@gmail.com>"]
readme = "README.md"
packages = [{include = "factorize_multiprocessing_testing"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}
flake8 = "^6.0.0"
mypy = "^0.991"

[tool.black]
line-length = 119
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
